--- a/package.xml
+++ b/package.xml
@@ -11,10 +11,12 @@
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
   <depend>rclcpp</depend>
+  <depend>rclcpp_action</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>gazebo_msgs</depend>
   <depend>visualization_msgs</depend>
   <depend>launch_yaml</depend>
   <depend>std_msgs</depend>
